<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hlc.daw2.isa.mislibros.fila">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:id="@+id/imagen"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imagen"
        android:src="@drawable/libro1"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/rating_nota"
        android:scaleType="fitCenter"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv_titulo_lib"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imagen"
        android:layout_toEndOf="@+id/imagen"
        android:hint="@string/tv_titulo"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_autor"
        android:layout_below="@+id/tv_titulo_lib"
        android:layout_toRightOf="@+id/imagen"
        android:layout_toEndOf="@+id/imagen"
        android:hint="@string/tv_autor" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rating_nota"
        android:layout_below="@+id/tv_autor"
        android:numStars="5"
        android:stepSize="0.1"
        android:layout_alignStart="@+id/tv_autor"
        android:layout_alignLeft="@+id/tv_autor"
        android:layout_toEndOf="@+id/tv_titulo_lib"
        android:rating="2"
        style="?android:attr/ratingBarStyleIndicator"
        />

</RelativeLayout>
